custom-elements: Introduce Element::IsValue() for "is value"

IsValue() is just a wrapper of FastGetAttribute(HTMLNames::isAttr)
now. However, it will be changed to a (rare) data member of Element in
order to clone customized built-in elements correctly.

This CL has no behavior changes.

Bug: 807871
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ifd7d63159be5596c425b86dcdb51d33ea517a87c
Reviewed-on: https://chromium-review.googlesource.com/908028
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535298}
Former-commit-id: eefda00ac65d7a74f1f516a824c20a39fc9f457e