third_party/WebKit/Source/core/svg/SVGScriptElement.cpp
@@ -151,7 +151,7 @@ Element* SVGScriptElement::CloneElementWithoutAttributesAndChildren() {
       CreateElementFlags::ByCloneNode().SetAlreadyStarted(
           loader_->AlreadyStarted());
   auto* element = new SVGScriptElement(GetDocument(), flags);
-  const AtomicString& is = FastGetAttribute(HTMLNames::isAttr);
+  const AtomicString& is = IsValue();
   if (!is.IsNull() && !V0CustomElement::IsValidName(element->localName()))
     V0CustomElementRegistrationContext::SetTypeExtension(element, is);
   return element;
